Add adopter attribute in task response